# detour-detection

./: .gitlab-ci.yml  README.md  detour_metric.py  docker-compose.yml  pyproject.toml  requirements.txt
de4l_detour_detection/: detour_detection.py
detour_detection/: detour_detection.py
resources/: test-dataset.json  test_porto_taxi_stop_based.csv
tests/: test_detour_detection.py  test_detour_metric.py
