[tool.poetry]
name = "de4l-detour-detection"
version = "0.1.2"
description = "A package for estimating the exposure of private information in trajectory data by detecting detours."
repository = "https://git.informatik.uni-leipzig.de/scads/de4l/privacy/de4l-detour-detection"
authors = ["Maja Schneider","Lukas Gehrke"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
requests = "^2.0"
python = ">=3.8,<3.11"
pandas = "^1.3.4"
geopy = "^2.2.0"
urllib3 = "^1.26.7"
openrouteservice = "^2.3.3"
torch = { version = "~1.9.0", optional = true }
de4l_geodata = { git = "ssh://git@git.informatik.uni-leipzig.de/scads/de4l/privacy/de4l-geodata.git", branch = "main" }

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pylint = "^2.12.2"

[tool.poetry.extras]
torch = ["torch"]

[tool.poetry.urls]
"Bug Tracker" = "https://git.informatik.uni-leipzig.de/scads/de4l/privacy/de4l-detour-detection/-/issues"
"Source" = "https://git.informatik.uni-leipzig.de/scads/de4l/privacy/de4l-detour-detection"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
