[tool.poetry]
name = "detour-detection"
version = "0.1.2"
description = "A package for estimating the exposure of private information in trajectory data by detecting detours."
repository = "https://github.com/majaschneider/detour-detection.git"
authors = ["Maja Schneider","Lukas Gehrke"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
requests = "^2.0"
python = ">=3.8,<3.11"
pandas = "^1.4.1"
geopy = "^2.2.0"
urllib3 = "^1.26.7"
openrouteservice = "^2.3.3"
torch = { version = "^1.10.2", optional = true }
geodata = { git = "https://github.com/majaschneider/geodata.git", branch = "main" }

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pylint = "^2.12.2"

[tool.poetry.extras]
torch = ["torch"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/majaschneider/detour-detection/issues"
"Source" = "https://github.com/majaschneider/detour-detection.git"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
